force-app/main/default/objects/HL7__c/HL7__c.object-meta.xml
<CustomObject>
    <label>LabOrder HL7 Results</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>LabOrder HL7 Results ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LabOrder HL7 Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>