force-app/main/default/objects/HL7__c/fields/CHC_External_Id__c.field-meta.xml
<CustomField>
    <fullName>CHC_External_Id__c</fullName>
    <description>This field used for CHC LabOrder for Hl7 Result

Clinical Report Id + Placer Id + Lab OrderId</description>
    <externalId>true</externalId>
    <label>CHC External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>