force-app/main/default/objects/HL7__c/fields/Clinician_Report__c.field-meta.xml
<CustomField>
    <fullName>Clinician_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clinician Report</label>
    <referenceTo>Clinician_Report__c</referenceTo>
    <relationshipLabel>LabOrder HL7 Results</relationshipLabel>
    <relationshipName>LabOrder_HL7_Results</relationshipName>
    <type>Lookup</type>
</CustomField>