force-app/main/default/objects/HL7__c/fields/Full_HL7_Dump_Message__c.field-meta.xml
<CustomField>
    <fullName>Full_HL7_Dump_Message__c</fullName>
    <label>Full_HL7_Dump_Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>