force-app/main/default/objects/HL7__c/fields/Message_Header__c.field-meta.xml
<CustomField>
    <fullName>Message_Header__c</fullName>
    <label>Message Header</label>
    <length>99999</length>
    <type>LongTextArea</type>
</CustomField>