force-app/main/default/objects/HL7__c/fields/Observation_Request__c.field-meta.xml
<CustomField>
    <fullName>Observation_Request__c</fullName>
    <label>Observation Request</label>
    <length>99999</length>
    <type>LongTextArea</type>
</CustomField>