force-app/main/default/objects/HL7__c/fields/Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order_ID</label>
    <referenceTo>Lab_Order__c</referenceTo>
    <relationshipName>LabOrder_HL7_Results</relationshipName>
    <type>Lookup</type>
</CustomField>