force-app/main/default/objects/HL7__c/fields/Patient_Identification__c.field-meta.xml
<CustomField>
    <fullName>Patient_Identification__c</fullName>
    <label>Patient Identification</label>
    <length>99999</length>
    <type>LongTextArea</type>
</CustomField>