force-app/main/default/objects/HL7__c/fields/Placer_Order__c.field-meta.xml
<CustomField>
    <fullName>Placer_Order__c</fullName>
    <externalId>true</externalId>
    <label>Placer Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>